finally a bit of a fix for the overflow scroll issue

--- a/app/static/css/composer.css
+++ b/app/static/css/composer.css
@@ -1,6 +1,10 @@
 /* FIX IMAGE */
 /* FIX SCROLL ON PIECE LIST */
 
+body {
+  overflow: hidden;
+}
+
 .composer-top {
   width: 100%;
   flex: 1;
@@ -23,7 +27,6 @@
   border-radius: 50%;
   overflow: hidden;
   object-fit: cover;
-  
   background-image: url('../img/JohannesBrahms.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -32,8 +35,8 @@
 .composer-bottom {
   width: 100%;
   flex: 2;
-  height: 90%;
-  max-height: 90%;
+  height: 100%;
+  min-height: 0px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -42,14 +45,19 @@
 
 
 .composer-piece-list {
-  
+  /*
   height: 90%;
   max-height: 90%;
+  overflow:hidden;
+  */
+  
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  overflow: auto;
+  height: 100%;
+  
   
 }
 
@@ -68,6 +76,7 @@
   width: 90%;
 }
 
+/*
 .piece-list-wrap {
     height: 75%;
     width: 80%;
@@ -78,7 +87,7 @@
     overflow: hidden;
     
 }
-
+*/
 .user-interaction-area {
   
   flex: 1;
@@ -90,18 +99,21 @@
 .piece-list {
     list-style-type: none;
     width: 90%;
-    max-height: 100%;
+    /*max-height: 100%;
+    
+    */
     height: 100%;
+    flex: 3 1 auto;
     padding: 0;
     border: 3px solid grey;
     border-radius: 5px;
-    overflow-y: scroll;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.piece-list li {
+.piece-title {
   color: #000;
   height: 50px;
   width: 90%;
